--- a/latex-talk.tex
+++ b/latex-talk.tex
@@ -1346,7 +1346,7 @@ deinen \directory{/home/yourname} Ordner.
 \end{frame}
 
 \begin{frame}[fragile]
-    \frametitle{cleverref}
+    \frametitle{cleveref}
     \begin{lstlisting}
 \usepackage{cleveref} % Preamble
 As can be seen in \cref{sec:examplea, sec:exampleb, sec:examplec, sec:examplef} and illustrated by \cref{fig:my-pic}, there is a lot to do.
